--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,50 @@
 buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
-        jcenter()
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
     }
 }
+
+plugins {
+    id 'com.matthewprenger.cursegradle' version '1.4.0'
+}
+
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = "${MC_VERSION}-${VERSION}"
 group = "com.ewyboy.${MODID}"
 archivesBaseName = MODNAME
 
-sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
+
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-
     apply plugin: 'idea'
     mappings channel: MCP_CHANNEL, version: MCP_MAPPINGS
 
     runs {
         client {
             workingDirectory project.file('run')
-
-            ideaModule "${rootProject.name}.${project.name}.main"
-
+            property 'fml.earlyprogresswindow', 'false'
             mods {
-                quickharvest {
+                clayworldgen {
                     source sourceSets.main
                 }
             }
         }
 
         server {
-
             workingDirectory project.file('run')
-            ideaModule "${rootProject.name}.${project.name}.main"
-
-
             mods {
-                quickharvest {
+                clayworldgen {
                     source sourceSets.main
                 }
             }
@@ -50,12 +52,8 @@ minecraft {
 
         data {
             workingDirectory project.file('run')
-
-            args '--mod', 'quickharvest', '--all', '--output', file('src/generated/resources/')
-            ideaModule "${rootProject.name}.${project.name}.main"
-
             mods {
-                quickharvest {
+                clayworldgen {
                     source sourceSets.main
                 }
             }
@@ -64,74 +62,46 @@ minecraft {
 }
 
 repositories {
-    mavenLocal()
+    maven {
+        url "https://www.cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
+
+sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${MC_VERSION}-${FORGE_VERSION}"
+    implementation fg.deobf("curse.maven:worldstripper-250603:3334904")
 }
 
 jar {
     manifest {
         attributes([
-                "Specification-Title": MODNAME,
-                "Specification-Vendor": AUTHOR,
-                "Specification-Version": "1",
-                "Implementation-Title": project.name,
-                "Implementation-Version": "${version}",
-                "Implementation-Vendor" : AUTHOR,
+                "Specification-Title"     : MODNAME,
+                "Specification-Vendor"    : AUTHOR,
+                "Specification-Version"   : "1",
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : VERSION,
+                "Implementation-Vendor"   : AUTHOR,
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
-task deobfJar(type: Jar) {
-    from sourceSets.main.output
-    classifier = 'deobf'
-}
-
-task sourcesJar(type: Jar) {
-    classifier = "sources"
-    from sourceSets.main.allJava
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = "javadoc"
-    from javadoc.destinationDir
-}
-
-tasks.build.dependsOn('sourcesJar', 'deobfJar')
-tasks.publish.dependsOn('build', 'reobfJar')
-
-artifacts {
-    archives jar
-    archives deobfJar
-    archives sourcesJar
-}
+jar.finalizedBy('reobfJar')
 
 publishing {
-    repositories {
-        maven {
-            name = "WorldStripper"
-            url = uri("https://maven.pkg.github.com/ewyboy/world-stripper")
-            credentials {
-                username = property('gpr.username')
-                password = property('gpr.token')
-            }
-        }
-        maven {
-            name = "local"
-            url "file:///${rootProject.projectDir}/mcmodsrepo"
-        }
-    }
     publications {
-        gpr(MavenPublication) {
-            artifact jar
-            artifact sourcesJar
-        }
         mavenJava(MavenPublication) {
             artifact jar
-            artifact sourcesJar
+        }
+    }
+    repositories {
+        maven {
+            url "file:///${project.projectDir}/mcmodsrepo"
         }
     }
 }
