--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,26 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
+# Gradle Settings
 org.gradle.jvmargs=-Xmx3G
 
 # Mod Info
-VERSION=1.2.1
+VERSION=1.2.2
 AUTHOR=Ewy
 MODNAME=Clay WorldGen
 MODID=clayworldgen
 
 # Dependencies
 MC_VERSION=1.16.5
-FORGE_VERSION=36.1.24
-MCP_CHANNEL=snapshot
-MCP_MAPPINGS=20210309-1.16.5
+FORGE_VERSION=36.1.25
+
+# Mappings
+MCP_CHANNEL=official
+# MCP_CHANNEL=snapshot
+MCP_MAPPINGS=1.16.5
+# MCP_MAPPINGS=20210309-1.16.5
+
+# Curse Maven
+WORLD_STRIPPER=3334904
+BIBLIOTHECA=3334930
+
+# Curse Forge
+PROJECT_ID=227276
+RELEASE_TYPE=release
